net/sdk/network/Azure.ResourceManager.Network/tests/SessionRecords/RouteTableTests/RouteTableApiTest[2018-11-01].json
{
  "Entries": [
    {
      "RequestUri": "https://management.azure.com/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c?api-version=**",
      "RequestMethod": "GET",
      "RequestHeaders": {
        "Accept": "application/json",
        "Authorization": "Sanitized",
        "traceparent": "00-415558739756b405e3802cf12fb61926-0a2c3af09b9ba533-00",
        "User-Agent": "azsdk-net-ResourceManager/1.6.0 (.NET 7.0.7; Microsoft Windows 10.0.22621)",
        "x-ms-client-request-id": "09c959e89bdbd5e7744154290c1f1f50",
        "x-ms-return-client-request-id": "true"
      },
      "RequestBody": null,
      "StatusCode": 200,
      "ResponseHeaders": {
        "Cache-Control": "no-cache",
        "Content-Length": "748",
        "Content-Type": "application/json; charset=utf-8",
        "Date": "Wed, 28 Jun 2023 15:50:49 GMT",
        "Expires": "-1",
        "Pragma": "no-cache",
        "Strict-Transport-Security": "max-age=31536000; includeSubDomains",
        "X-Content-Type-Options": "nosniff",
        "x-ms-correlation-request-id": "4c54b320-beb4-45f4-a365-363e8ff9f76c",
        "x-ms-ratelimit-remaining-subscription-reads": "11779",
        "x-ms-request-id": "4c54b320-beb4-45f4-a365-363e8ff9f76c",
        "x-ms-routing-request-id": "SOUTHEASTASIA:20230628T155049Z:4c54b320-beb4-45f4-a365-363e8ff9f76c"
      },
      "ResponseBody": {
        "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c",
        "authorizationSource": "RoleBased",
        "managedByTenants": [],
        "tags": {
          "TagKey-9823": "TagValue-1254",
          "TagKey-3481": "TagValue-320",
          "TagKey-4926": "TagValue-1187",
          "TagKey-751": "TagValue-3921",
          "TagKey-1866": "TagValue-8559",
          "TagKey-3094": "TagValue-9190",
          "TagKey-2449": "TagValue-9",
          "TagKey-8379": "TagValue-164",
          "TagKey-7470": "TagValue-2205",
          "TagKey-4236": "TagValue-3698",
          "TagKey-5316": "TagValue-2725"
        },
        "subscriptionId": "db1ab6f0-4769-4b27-930e-01e2ef9c123c",
        "tenantId": "72f988bf-86f1-41af-91ab-2d7cd011db47",
        "displayName": ".NET Mgmt SDK Test with TTL = 1 Day",
        "state": "Enabled",
        "subscriptionPolicies": {
          "locationPlacementId": "Internal_2014-09-01",
          "quotaId": "Internal_2014-09-01",
          "spendingLimit": "Off"
        }
      }
    },
    {
      "RequestUri": "https://management.azure.com/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourcegroups/csmrg3239?api-version=**",
      "RequestMethod": "PUT",
      "RequestHeaders": {
        "Accept": "application/json",
        "Authorization": "Sanitized",
        "Content-Length": "21",
        "Content-Type": "application/json",
        "traceparent": "00-7f94b16505d696af0569f765ebb3e212-802de3a60ae2ae83-00",
        "User-Agent": "azsdk-net-ResourceManager/1.6.0 (.NET 7.0.7; Microsoft Windows 10.0.22621)",
        "x-ms-client-request-id": "284099f43c34949371b75f799a46e15a",
        "x-ms-return-client-request-id": "true"
      },
      "RequestBody": {
        "location": "westus"
      },
      "StatusCode": 201,
      "ResponseHeaders": {
        "Cache-Control": "no-cache",
        "Content-Length": "215",
        "Content-Type": "application/json; charset=utf-8",
        "Date": "Wed, 28 Jun 2023 15:50:50 GMT",
        "Expires": "-1",
        "Pragma": "no-cache",
        "Strict-Transport-Security": "max-age=31536000; includeSubDomains",
        "X-Content-Type-Options": "nosniff",
        "x-ms-correlation-request-id": "c23bb6e6-7ab6-433e-a643-80f84fd08694",
        "x-ms-ratelimit-remaining-subscription-writes": "1149",
        "x-ms-request-id": "c23bb6e6-7ab6-433e-a643-80f84fd08694",
        "x-ms-routing-request-id": "SOUTHEASTASIA:20230628T155050Z:c23bb6e6-7ab6-433e-a643-80f84fd08694"
      },
      "ResponseBody": {
        "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg3239",
        "name": "csmrg3239",
        "type": "Microsoft.Resources/resourceGroups",
        "location": "westus",
        "properties": {
          "provisioningState": "Succeeded"
        }
      }
    },
    {
      "RequestUri": "https://management.azure.com/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg3239/providers/Microsoft.Network/routeTables/azsmnet8989?api-version=2018-11-01",
      "RequestMethod": "PUT",
      "RequestHeaders": {
        "Accept": "application/json",
        "Authorization": "Sanitized",
        "Content-Length": "182",
        "Content-Type": "application/json",
        "traceparent": "00-b854f5224e9fae60f90f43b108617f59-31a5814ce4ed9f3e-00",
        "User-Agent": "azsdk-net-ResourceManager.Network/1.3.0-alpha.20230627.1 (.NET 7.0.7; Microsoft Windows 10.0.22621)",
        "x-ms-client-request-id": "a9f9a48fd419f60cf69e5ad91ddf2a59",
        "x-ms-return-client-request-id": "true"
      },
      "RequestBody": {
        "properties": {
          "routes": [
            {
              "properties": {
                "addressPrefix": "192.168.1.0/24",
                "nextHopType": "VirtualAppliance",
                "nextHopIpAddress": "23.108.1.1"
              },
              "name": "azsmnet246"
            }
          ]
        },
        "location": "westus"
      },
      "StatusCode": 201,
      "ResponseHeaders": {
        "Azure-AsyncNotification": "Enabled",
        "Azure-AsyncOperation": "https://management.azure.com/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/providers/Microsoft.Network/locations/westus/operations/0af09a50-2809-4a02-8959-c5c135c5bcae?api-version=2018-11-01",
        "Cache-Control": "no-cache",
        "Content-Length": "1036",
        "Content-Type": "application/json; charset=utf-8",
        "Date": "Wed, 28 Jun 2023 15:50:52 GMT",
        "Expires": "-1",
        "Pragma": "no-cache",
        "Retry-After": "2",
        "Server": [
          "Microsoft-HTTPAPI/2.0",
          "Microsoft-HTTPAPI/2.0"
        ],
        "Strict-Transport-Security": "max-age=31536000; includeSubDomains",
        "X-Content-Type-Options": "nosniff",
        "x-ms-arm-service-request-id": "e11d338f-eccb-4d8c-8c0a-0e2c05e1a83a",
        "x-ms-client-request-id": "a9f9a48fd419f60cf69e5ad91ddf2a59",
        "x-ms-correlation-request-id": "e4e63b46-cddc-4a3b-ae69-c713a987de74",
        "x-ms-ratelimit-remaining-subscription-writes": "1148",
        "x-ms-request-id": "0af09a50-2809-4a02-8959-c5c135c5bcae",
        "x-ms-routing-request-id": "SOUTHEASTASIA:20230628T155053Z:e4e63b46-cddc-4a3b-ae69-c713a987de74"
      },
      "ResponseBody": {
        "name": "azsmnet8989",
        "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg3239/providers/Microsoft.Network/routeTables/azsmnet8989",
        "etag": "W/\"2507728c-a34f-4e09-b5fd-746dbf62ad3c\"",
        "type": "Microsoft.Network/routeTables",
        "location": "westus",
        "properties": {
          "provisioningState": "Updating",
          "resourceGuid": "4bd6260a-8821-4ca3-954e-4d6101a92b1f",
          "disableBgpRoutePropagation": false,
          "routes": [
            {
              "name": "azsmnet246",
              "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg3239/providers/Microsoft.Network/routeTables/azsmnet8989/routes/azsmnet246",
              "etag": "W/\"2507728c-a34f-4e09-b5fd-746dbf62ad3c\"",
              "properties": {
                "provisioningState": "Updating",
                "addressPrefix": "192.168.1.0/24",
                "nextHopType": "VirtualAppliance",
                "nextHopIpAddress": "23.108.1.1"
              },
              "type": "Microsoft.Network/routeTables/routes"
            }
          ]
        }
      }
    },
    {
      "RequestUri": "https://management.azure.com/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/providers/Microsoft.Network/locations/westus/operations/0af09a50-2809-4a02-8959-c5c135c5bcae?api-version=2018-11-01",
      "RequestMethod": "GET",
      "RequestHeaders": {
        "Authorization": "Sanitized",
        "traceparent": "00-b854f5224e9fae60f90f43b108617f59-43ea3ccf924ce748-00",
        "User-Agent": "azsdk-net-ResourceManager/1.6.0 (.NET 7.0.7; Microsoft Windows 10.0.22621)",
        "x-ms-client-request-id": "5ec1ff91effa532628469df517dd4199",
        "x-ms-return-client-request-id": "true"
      },
      "RequestBody": null,
      "StatusCode": 200,
      "ResponseHeaders": {
        "Cache-Control": "no-cache",
        "Content-Length": "29",
        "Content-Type": "application/json; charset=utf-8",
        "Date": "Wed, 28 Jun 2023 15:50:53 GMT",
        "Expires": "-1",
        "Pragma": "no-cache",
        "Server": [
          "Microsoft-HTTPAPI/2.0",
          "Microsoft-HTTPAPI/2.0"
        ],
        "Strict-Transport-Security": "max-age=31536000; includeSubDomains",
        "X-Content-Type-Options": "nosniff",
        "x-ms-arm-service-request-id": "a8df6ffc-3ff9-47b5-9fed-47885f415cb5",
        "x-ms-client-request-id": "5ec1ff91effa532628469df517dd4199",
        "x-ms-correlation-request-id": "74ed718b-5645-46c2-b1ee-cf450bfeb7a7",
        "x-ms-ratelimit-remaining-subscription-reads": "11778",
        "x-ms-request-id": "211bc990-aae5-4a7d-bb1b-e9fea31dd92e",
        "x-ms-routing-request-id": "SOUTHEASTASIA:20230628T155053Z:74ed718b-5645-46c2-b1ee-cf450bfeb7a7"
      },
      "ResponseBody": {
        "status": "Succeeded"
      }
    },
    {
      "RequestUri": "https://management.azure.com/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg3239/providers/Microsoft.Network/routeTables/azsmnet8989?api-version=2018-11-01",
      "RequestMethod": "GET",
      "RequestHeaders": {
        "Authorization": "Sanitized",
        "traceparent": "00-b854f5224e9fae60f90f43b108617f59-8768873417bdd4b9-00",
        "User-Agent": "azsdk-net-ResourceManager/1.6.0 (.NET 7.0.7; Microsoft Windows 10.0.22621)",
        "x-ms-client-request-id": "cc2ced70d9af59012f8fc5917832fc83",
        "x-ms-return-client-request-id": "true"
      },
      "RequestBody": null,
      "StatusCode": 200,
      "ResponseHeaders": {
        "Cache-Control": "no-cache",
        "Content-Length": "1038",
        "Content-Type": "application/json; charset=utf-8",
        "Date": "Wed, 28 Jun 2023 15:50:53 GMT",
        "ETag": "W/\"d4b6ed34-eca3-4978-afcd-c2970da1dcf4\"",
        "Expires": "-1",
        "Pragma": "no-cache",
        "Server": [
          "Microsoft-HTTPAPI/2.0",
          "Microsoft-HTTPAPI/2.0"
        ],
        "Strict-Transport-Security": "max-age=31536000; includeSubDomains",
        "X-Content-Type-Options": "nosniff",
        "x-ms-arm-service-request-id": "93b6a611-c147-4464-b0a3-cb8f4cd0347f",
        "x-ms-client-request-id": "cc2ced70d9af59012f8fc5917832fc83",
        "x-ms-correlation-request-id": "5454469e-0110-477a-9996-82f4a707120b",
        "x-ms-ratelimit-remaining-subscription-reads": "11777",
        "x-ms-request-id": "1e15141c-6c5a-4d96-bce9-4875844862cc",
        "x-ms-routing-request-id": "SOUTHEASTASIA:20230628T155053Z:5454469e-0110-477a-9996-82f4a707120b"
      },
      "ResponseBody": {
        "name": "azsmnet8989",
        "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg3239/providers/Microsoft.Network/routeTables/azsmnet8989",
        "etag": "W/\"d4b6ed34-eca3-4978-afcd-c2970da1dcf4\"",
        "type": "Microsoft.Network/routeTables",
        "location": "westus",
        "properties": {
          "provisioningState": "Succeeded",
          "resourceGuid": "4bd6260a-8821-4ca3-954e-4d6101a92b1f",
          "disableBgpRoutePropagation": false,
          "routes": [
            {
              "name": "azsmnet246",
              "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg3239/providers/Microsoft.Network/routeTables/azsmnet8989/routes/azsmnet246",
              "etag": "W/\"d4b6ed34-eca3-4978-afcd-c2970da1dcf4\"",
              "properties": {
                "provisioningState": "Succeeded",
                "addressPrefix": "192.168.1.0/24",
                "nextHopType": "VirtualAppliance",
                "nextHopIpAddress": "23.108.1.1"
              },
              "type": "Microsoft.Network/routeTables/routes"
            }
          ]
        }
      }
    },
    {
      "RequestUri": "https://management.azure.com/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg3239/providers/Microsoft.Network/routeTables/azsmnet8989?api-version=2018-11-01",
      "RequestMethod": "GET",
      "RequestHeaders": {
        "Accept": "application/json",
        "Authorization": "Sanitized",
        "traceparent": "00-7c9530e347e4fd347d898af222ef1412-5bbd155bee8d442c-00",
        "User-Agent": "azsdk-net-ResourceManager.Network/1.3.0-alpha.20230627.1 (.NET 7.0.7; Microsoft Windows 10.0.22621)",
        "x-ms-client-request-id": "1d474ccfcc1ec55e67fc8cd7977e5206",
        "x-ms-return-client-request-id": "true"
      },
      "RequestBody": null,
      "StatusCode": 200,
      "ResponseHeaders": {
        "Cache-Control": "no-cache",
        "Content-Length": "1038",
        "Content-Type": "application/json; charset=utf-8",
        "Date": "Wed, 28 Jun 2023 15:50:54 GMT",
        "ETag": "W/\"d4b6ed34-eca3-4978-afcd-c2970da1dcf4\"",
        "Expires": "-1",
        "Pragma": "no-cache",
        "Server": [
          "Microsoft-HTTPAPI/2.0",
          "Microsoft-HTTPAPI/2.0"
        ],
        "Strict-Transport-Security": "max-age=31536000; includeSubDomains",
        "X-Content-Type-Options": "nosniff",
        "x-ms-arm-service-request-id": "342f7526-db93-4db3-ac80-adee4532bc79",
        "x-ms-client-request-id": "1d474ccfcc1ec55e67fc8cd7977e5206",
        "x-ms-correlation-request-id": "b13def61-e9a1-44df-b10b-9dc4f8d751b5",
        "x-ms-ratelimit-remaining-subscription-reads": "11776",
        "x-ms-request-id": "5c2ad2ae-4004-44a2-b68b-87496d9170f3",
        "x-ms-routing-request-id": "SOUTHEASTASIA:20230628T155054Z:b13def61-e9a1-44df-b10b-9dc4f8d751b5"
      },
      "ResponseBody": {
        "name": "azsmnet8989",
        "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg3239/providers/Microsoft.Network/routeTables/azsmnet8989",
        "etag": "W/\"d4b6ed34-eca3-4978-afcd-c2970da1dcf4\"",
        "type": "Microsoft.Network/routeTables",
        "location": "westus",
        "properties": {
          "provisioningState": "Succeeded",
          "resourceGuid": "4bd6260a-8821-4ca3-954e-4d6101a92b1f",
          "disableBgpRoutePropagation": false,
          "routes": [
            {
              "name": "azsmnet246",
              "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg3239/providers/Microsoft.Network/routeTables/azsmnet8989/routes/azsmnet246",
              "etag": "W/\"d4b6ed34-eca3-4978-afcd-c2970da1dcf4\"",
              "properties": {
                "provisioningState": "Succeeded",
                "addressPrefix": "192.168.1.0/24",
                "nextHopType": "VirtualAppliance",
                "nextHopIpAddress": "23.108.1.1"
              },
              "type": "Microsoft.Network/routeTables/routes"
            }
          ]
        }
      }
    },
    {
      "RequestUri": "https://management.azure.com/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg3239/providers/Microsoft.Network/routeTables/azsmnet8989?api-version=2018-11-01",
      "RequestMethod": "PUT",
      "RequestHeaders": {
        "Accept": "application/json",
        "Authorization": "Sanitized",
        "Content-Length": "647",
        "Content-Type": "application/json",
        "traceparent": "00-3eb1ab779a4646d5cee959bd45b8f0f9-1a7ecbb696476d91-00",
        "User-Agent": "azsdk-net-ResourceManager.Network/1.3.0-alpha.20230627.1 (.NET 7.0.7; Microsoft Windows 10.0.22621)",
        "x-ms-client-request-id": "0c68c3460246b85dfd682e6b2a94daf5",
        "x-ms-return-client-request-id": "true"
      },
      "RequestBody": {
        "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg3239/providers/Microsoft.Network/routeTables/azsmnet8989",
        "properties": {
          "routes": [
            {
              "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg3239/providers/Microsoft.Network/routeTables/azsmnet8989/routes/azsmnet246",
              "type": "Microsoft.Network/routeTables/routes",
              "properties": {
                "addressPrefix": "192.168.1.0/24",
                "nextHopType": "VirtualAppliance",
                "nextHopIpAddress": "23.108.1.1"
              },
              "name": "azsmnet246"
            },
            {
              "properties": {
                "addressPrefix": "10.0.1.0/24",
                "nextHopType": "VnetLocal"
              },
              "name": "azsmnet2845"
            }
          ],
          "disableBgpRoutePropagation": false
        },
        "location": "westus"
      },
      "StatusCode": 200,
      "ResponseHeaders": {
        "Azure-AsyncNotification": "Enabled",
        "Azure-AsyncOperation": "https://management.azure.com/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/providers/Microsoft.Network/locations/westus/operations/90e16216-80a5-4961-81a6-bd0d17f35cd1?api-version=2018-11-01",
        "Cache-Control": "no-cache",
        "Content-Length": "1534",
        "Content-Type": "application/json; charset=utf-8",
        "Date": "Wed, 28 Jun 2023 15:50:54 GMT",
        "Expires": "-1",
        "Pragma": "no-cache",
        "Retry-After": "2",
        "Server": [
          "Microsoft-HTTPAPI/2.0",
          "Microsoft-HTTPAPI/2.0"
        ],
        "Strict-Transport-Security": "max-age=31536000; includeSubDomains",
        "X-Content-Type-Options": "nosniff",
        "x-ms-arm-service-request-id": "b25d21ab-994b-4279-aea5-a73bb54ec5c1",
        "x-ms-client-request-id": "0c68c3460246b85dfd682e6b2a94daf5",
        "x-ms-correlation-request-id": "21ffa347-967b-4591-8ca3-7e63d186b412",
        "x-ms-ratelimit-remaining-subscription-writes": "1147",
        "x-ms-request-id": "90e16216-80a5-4961-81a6-bd0d17f35cd1",
        "x-ms-routing-request-id": "SOUTHEASTASIA:20230628T155054Z:21ffa347-967b-4591-8ca3-7e63d186b412"
      },
      "ResponseBody": {
        "name": "azsmnet8989",
        "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg3239/providers/Microsoft.Network/routeTables/azsmnet8989",
        "etag": "W/\"ea46a1bf-f371-4406-9dfd-49ac5a9bf66b\"",
        "type": "Microsoft.Network/routeTables",
        "location": "westus",
        "properties": {
          "provisioningState": "Updating",
          "resourceGuid": "4bd6260a-8821-4ca3-954e-4d6101a92b1f",
          "disableBgpRoutePropagation": false,
          "routes": [
            {
              "name": "azsmnet246",
              "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg3239/providers/Microsoft.Network/routeTables/azsmnet8989/routes/azsmnet246",
              "etag": "W/\"ea46a1bf-f371-4406-9dfd-49ac5a9bf66b\"",
              "properties": {
                "provisioningState": "Updating",
                "addressPrefix": "192.168.1.0/24",
                "nextHopType": "VirtualAppliance",
                "nextHopIpAddress": "23.108.1.1"
              },
              "type": "Microsoft.Network/routeTables/routes"
            },
            {
              "name": "azsmnet2845",
              "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg3239/providers/Microsoft.Network/routeTables/azsmnet8989/routes/azsmnet2845",
              "etag": "W/\"ea46a1bf-f371-4406-9dfd-49ac5a9bf66b\"",
              "properties": {
                "provisioningState": "Updating",
                "addressPrefix": "10.0.1.0/24",
                "nextHopType": "VnetLocal"
              },
              "type": "Microsoft.Network/routeTables/routes"
            }
          ]
        }
      }
    },
    {
      "RequestUri": "https://management.azure.com/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/providers/Microsoft.Network/locations/westus/operations/90e16216-80a5-4961-81a6-bd0d17f35cd1?api-version=2018-11-01",
      "RequestMethod": "GET",
      "RequestHeaders": {
        "Authorization": "Sanitized",
        "traceparent": "00-3eb1ab779a4646d5cee959bd45b8f0f9-0ec33db4c59df045-00",
        "User-Agent": "azsdk-net-ResourceManager/1.6.0 (.NET 7.0.7; Microsoft Windows 10.0.22621)",
        "x-ms-client-request-id": "b54bbf3defc9cc3cee8f1fb69df39bd3",
        "x-ms-return-client-request-id": "true"
      },
      "RequestBody": null,
      "StatusCode": 200,
      "ResponseHeaders": {
        "Cache-Control": "no-cache",
        "Content-Length": "29",
        "Content-Type": "application/json; charset=utf-8",
        "Date": "Wed, 28 Jun 2023 15:50:54 GMT",
        "Expires": "-1",
        "Pragma": "no-cache",
        "Server": [
          "Microsoft-HTTPAPI/2.0",
          "Microsoft-HTTPAPI/2.0"
        ],
        "Strict-Transport-Security": "max-age=31536000; includeSubDomains",
        "X-Content-Type-Options": "nosniff",
        "x-ms-arm-service-request-id": "6b830fd5-0e99-437e-864c-cbb2e19a4f3e",
        "x-ms-client-request-id": "b54bbf3defc9cc3cee8f1fb69df39bd3",
        "x-ms-correlation-request-id": "435ecdd0-cb7a-4ae6-86fc-86f18774f6aa",
        "x-ms-ratelimit-remaining-subscription-reads": "11775",
        "x-ms-request-id": "0030dace-18c1-4db9-8939-35efc9c8fd3e",
        "x-ms-routing-request-id": "SOUTHEASTASIA:20230628T155055Z:435ecdd0-cb7a-4ae6-86fc-86f18774f6aa"
      },
      "ResponseBody": {
        "status": "Succeeded"
      }
    },
    {
      "RequestUri": "https://management.azure.com/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg3239/providers/Microsoft.Network/routeTables/azsmnet8989?api-version=2018-11-01",
      "RequestMethod": "GET",
      "RequestHeaders": {
        "Authorization": "Sanitized",
        "traceparent": "00-3eb1ab779a4646d5cee959bd45b8f0f9-9d354d99cf53364c-00",
        "User-Agent": "azsdk-net-ResourceManager/1.6.0 (.NET 7.0.7; Microsoft Windows 10.0.22621)",
        "x-ms-client-request-id": "7d8d96228758227048c47dde9dab6ad3",
        "x-ms-return-client-request-id": "true"
      },
      "RequestBody": null,
      "StatusCode": 200,
      "ResponseHeaders": {
        "Cache-Control": "no-cache",
        "Content-Length": "1537",
        "Content-Type": "application/json; charset=utf-8",
        "Date": "Wed, 28 Jun 2023 15:50:55 GMT",
        "ETag": "W/\"4d4c6962-0915-445d-88a3-cb0bbe455d15\"",
        "Expires": "-1",
        "Pragma": "no-cache",
        "Server": [
          "Microsoft-HTTPAPI/2.0",
          "Microsoft-HTTPAPI/2.0"
        ],
        "Strict-Transport-Security": "max-age=31536000; includeSubDomains",
        "X-Content-Type-Options": "nosniff",
        "x-ms-arm-service-request-id": "2c3af766-0042-4ca9-97f8-cf8f90a0821a",
        "x-ms-client-request-id": "7d8d96228758227048c47dde9dab6ad3",
        "x-ms-correlation-request-id": "f7a7558c-47fe-45a3-8a46-bd4a4ba468a8",
        "x-ms-ratelimit-remaining-subscription-reads": "11774",
        "x-ms-request-id": "705c1cd0-5322-460e-9512-5b30fb35d54b",
        "x-ms-routing-request-id": "SOUTHEASTASIA:20230628T155055Z:f7a7558c-47fe-45a3-8a46-bd4a4ba468a8"
      },
      "ResponseBody": {
        "name": "azsmnet8989",
        "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg3239/providers/Microsoft.Network/routeTables/azsmnet8989",
        "etag": "W/\"4d4c6962-0915-445d-88a3-cb0bbe455d15\"",
        "type": "Microsoft.Network/routeTables",
        "location": "westus",
        "properties": {
          "provisioningState": "Succeeded",
          "resourceGuid": "4bd6260a-8821-4ca3-954e-4d6101a92b1f",
          "disableBgpRoutePropagation": false,
          "routes": [
            {
              "name": "azsmnet246",
              "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg3239/providers/Microsoft.Network/routeTables/azsmnet8989/routes/azsmnet246",
              "etag": "W/\"4d4c6962-0915-445d-88a3-cb0bbe455d15\"",
              "properties": {
                "provisioningState": "Succeeded",
                "addressPrefix": "192.168.1.0/24",
                "nextHopType": "VirtualAppliance",
                "nextHopIpAddress": "23.108.1.1"
              },
              "type": "Microsoft.Network/routeTables/routes"
            },
            {
              "name": "azsmnet2845",
              "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg3239/providers/Microsoft.Network/routeTables/azsmnet8989/routes/azsmnet2845",
              "etag": "W/\"4d4c6962-0915-445d-88a3-cb0bbe455d15\"",
              "properties": {
                "provisioningState": "Succeeded",
                "addressPrefix": "10.0.1.0/24",
                "nextHopType": "VnetLocal"
              },
              "type": "Microsoft.Network/routeTables/routes"
            }
          ]
        }
      }
    },
    {
      "RequestUri": "https://management.azure.com/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg3239/providers/Microsoft.Network/routeTables/azsmnet8989?api-version=2018-11-01",
      "RequestMethod": "GET",
      "RequestHeaders": {
        "Accept": "application/json",
        "Authorization": "Sanitized",
        "traceparent": "00-72a8b248fe7eb026c6552c1f87955ff5-6767f6bdd2ad5fc4-00",
        "User-Agent": "azsdk-net-ResourceManager.Network/1.3.0-alpha.20230627.1 (.NET 7.0.7; Microsoft Windows 10.0.22621)",
        "x-ms-client-request-id": "6a2d7da624495a2bdd5adb0603c4079b",
        "x-ms-return-client-request-id": "true"
      },
      "RequestBody": null,
      "StatusCode": 200,
      "ResponseHeaders": {
        "Cache-Control": "no-cache",
        "Content-Length": "1537",
        "Content-Type": "application/json; charset=utf-8",
        "Date": "Wed, 28 Jun 2023 15:50:55 GMT",
        "ETag": "W/\"4d4c6962-0915-445d-88a3-cb0bbe455d15\"",
        "Expires": "-1",
        "Pragma": "no-cache",
        "Server": [
          "Microsoft-HTTPAPI/2.0",
          "Microsoft-HTTPAPI/2.0"
        ],
        "Strict-Transport-Security": "max-age=31536000; includeSubDomains",
        "X-Content-Type-Options": "nosniff",
        "x-ms-arm-service-request-id": "0398f5dd-4cf1-4447-ab6e-af30fd384b5a",
        "x-ms-client-request-id": "6a2d7da624495a2bdd5adb0603c4079b",
        "x-ms-correlation-request-id": "da8b5f15-15a6-4d19-9ff7-339ed889bfaf",
        "x-ms-ratelimit-remaining-subscription-reads": "11773",
        "x-ms-request-id": "a6ed260f-1bd5-4c72-813a-22a51e77c068",
        "x-ms-routing-request-id": "SOUTHEASTASIA:20230628T155056Z:da8b5f15-15a6-4d19-9ff7-339ed889bfaf"
      },
      "ResponseBody": {
        "name": "azsmnet8989",
        "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg3239/providers/Microsoft.Network/routeTables/azsmnet8989",
        "etag": "W/\"4d4c6962-0915-445d-88a3-cb0bbe455d15\"",
        "type": "Microsoft.Network/routeTables",
        "location": "westus",
        "properties": {
          "provisioningState": "Succeeded",
          "resourceGuid": "4bd6260a-8821-4ca3-954e-4d6101a92b1f",
          "disableBgpRoutePropagation": false,
          "routes": [
            {
              "name": "azsmnet246",
              "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg3239/providers/Microsoft.Network/routeTables/azsmnet8989/routes/azsmnet246",
              "etag": "W/\"4d4c6962-0915-445d-88a3-cb0bbe455d15\"",
              "properties": {
                "provisioningState": "Succeeded",
                "addressPrefix": "192.168.1.0/24",
                "nextHopType": "VirtualAppliance",
                "nextHopIpAddress": "23.108.1.1"
              },
              "type": "Microsoft.Network/routeTables/routes"
            },
            {
              "name": "azsmnet2845",
              "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg3239/providers/Microsoft.Network/routeTables/azsmnet8989/routes/azsmnet2845",
              "etag": "W/\"4d4c6962-0915-445d-88a3-cb0bbe455d15\"",
              "properties": {
                "provisioningState": "Succeeded",
                "addressPrefix": "10.0.1.0/24",
                "nextHopType": "VnetLocal"
              },
              "type": "Microsoft.Network/routeTables/routes"
            }
          ]
        }
      }
    },
    {
      "RequestUri": "https://management.azure.com/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg3239/providers/Microsoft.Network/routeTables/azsmnet8989?api-version=2018-11-01",
      "RequestMethod": "PUT",
      "RequestHeaders": {
        "Accept": "application/json",
        "Authorization": "Sanitized",
        "Content-Length": "513",
        "Content-Type": "application/json",
        "traceparent": "00-c88aabb6624f6825e3556cce0206980f-a4fb904e3318d4f4-00",
        "User-Agent": "azsdk-net-ResourceManager.Network/1.3.0-alpha.20230627.1 (.NET 7.0.7; Microsoft Windows 10.0.22621)",
        "x-ms-client-request-id": "b69091cc449db5584f286d05715e2e43",
        "x-ms-return-client-request-id": "true"
      },
      "RequestBody": {
        "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg3239/providers/Microsoft.Network/routeTables/azsmnet8989",
        "properties": {
          "routes": [
            {
              "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg3239/providers/Microsoft.Network/routeTables/azsmnet8989/routes/azsmnet2845",
              "type": "Microsoft.Network/routeTables/routes",
              "properties": {
                "addressPrefix": "10.0.1.0/24",
                "nextHopType": "VnetLocal"
              },
              "name": "azsmnet2845"
            }
          ],
          "disableBgpRoutePropagation": false
        },
        "location": "westus"
      },
      "StatusCode": 200,
      "ResponseHeaders": {
        "Azure-AsyncNotification": "Enabled",
        "Azure-AsyncOperation": "https://management.azure.com/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/providers/Microsoft.Network/locations/westus/operations/5e2dcca2-ed8a-4da2-80c5-ac921820ca3e?api-version=2018-11-01",
        "Cache-Control": "no-cache",
        "Content-Length": "983",
        "Content-Type": "application/json; charset=utf-8",
        "Date": "Wed, 28 Jun 2023 15:50:56 GMT",
        "Expires": "-1",
        "Pragma": "no-cache",
        "Retry-After": "2",
        "Server": [
          "Microsoft-HTTPAPI/2.0",
          "Microsoft-HTTPAPI/2.0"
        ],
        "Strict-Transport-Security": "max-age=31536000; includeSubDomains",
        "X-Content-Type-Options": "nosniff",
        "x-ms-arm-service-request-id": "3a716312-e11c-42c1-9b2e-0fac477abfe7",
        "x-ms-client-request-id": "b69091cc449db5584f286d05715e2e43",
        "x-ms-correlation-request-id": "7600edb0-9af9-4247-a2f8-7371f3464cde",
        "x-ms-ratelimit-remaining-subscription-writes": "1146",
        "x-ms-request-id": "5e2dcca2-ed8a-4da2-80c5-ac921820ca3e",
        "x-ms-routing-request-id": "SOUTHEASTASIA:20230628T155056Z:7600edb0-9af9-4247-a2f8-7371f3464cde"
      },
      "ResponseBody": {
        "name": "azsmnet8989",
        "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg3239/providers/Microsoft.Network/routeTables/azsmnet8989",
        "etag": "W/\"34b935d6-f8fd-4f02-8e6a-7306085d403f\"",
        "type": "Microsoft.Network/routeTables",
        "location": "westus",
        "properties": {
          "provisioningState": "Updating",
          "resourceGuid": "4bd6260a-8821-4ca3-954e-4d6101a92b1f",
          "disableBgpRoutePropagation": false,
          "routes": [
            {
              "name": "azsmnet2845",
              "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg3239/providers/Microsoft.Network/routeTables/azsmnet8989/routes/azsmnet2845",
              "etag": "W/\"34b935d6-f8fd-4f02-8e6a-7306085d403f\"",
              "properties": {
                "provisioningState": "Updating",
                "addressPrefix": "10.0.1.0/24",
                "nextHopType": "VnetLocal"
              },
              "type": "Microsoft.Network/routeTables/routes"
            }
          ]
        }
      }
    },
    {
      "RequestUri": "https://management.azure.com/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/providers/Microsoft.Network/locations/westus/operations/5e2dcca2-ed8a-4da2-80c5-ac921820ca3e?api-version=2018-11-01",
      "RequestMethod": "GET",
      "RequestHeaders": {
        "Authorization": "Sanitized",
        "traceparent": "00-c88aabb6624f6825e3556cce0206980f-6605e82b03b25508-00",
        "User-Agent": "azsdk-net-ResourceManager/1.6.0 (.NET 7.0.7; Microsoft Windows 10.0.22621)",
        "x-ms-client-request-id": "0c12e2bdb31a623524781b21b725e87f",
        "x-ms-return-client-request-id": "true"
      },
      "RequestBody": null,
      "StatusCode": 200,
      "ResponseHeaders": {
        "Cache-Control": "no-cache",
        "Content-Length": "29",
        "Content-Type": "application/json; charset=utf-8",
        "Date": "Wed, 28 Jun 2023 15:50:56 GMT",
        "Expires": "-1",
        "Pragma": "no-cache",
        "Server": [
          "Microsoft-HTTPAPI/2.0",
          "Microsoft-HTTPAPI/2.0"
        ],
        "Strict-Transport-Security": "max-age=31536000; includeSubDomains",
        "X-Content-Type-Options": "nosniff",
        "x-ms-arm-service-request-id": "87ff251f-aebc-4156-bc8b-266583a9f78b",
        "x-ms-client-request-id": "0c12e2bdb31a623524781b21b725e87f",
        "x-ms-correlation-request-id": "8166a3db-c78a-4d91-9f1a-1e92ca49e4b1",
        "x-ms-ratelimit-remaining-subscription-reads": "11772",
        "x-ms-request-id": "54489e83-e63a-41ef-97f8-fdec81160f62",
        "x-ms-routing-request-id": "SOUTHEASTASIA:20230628T155057Z:8166a3db-c78a-4d91-9f1a-1e92ca49e4b1"
      },
      "ResponseBody": {
        "status": "Succeeded"
      }
    },
    {
      "RequestUri": "https://management.azure.com/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg3239/providers/Microsoft.Network/routeTables/azsmnet8989?api-version=2018-11-01",
      "RequestMethod": "GET",
      "RequestHeaders": {
        "Authorization": "Sanitized",
        "traceparent": "00-c88aabb6624f6825e3556cce0206980f-a3adb20d4821632e-00",
        "User-Agent": "azsdk-net-ResourceManager/1.6.0 (.NET 7.0.7; Microsoft Windows 10.0.22621)",
        "x-ms-client-request-id": "b7e1972be7b49bd508934b6aa45b09e5",
        "x-ms-return-client-request-id": "true"
      },
      "RequestBody": null,
      "StatusCode": 200,
      "ResponseHeaders": {
        "Cache-Control": "no-cache",
        "Content-Length": "985",
        "Content-Type": "application/json; charset=utf-8",
        "Date": "Wed, 28 Jun 2023 15:50:57 GMT",
        "ETag": "W/\"82293c47-9b70-4b65-ac44-b9e3e7342bfa\"",
        "Expires": "-1",
        "Pragma": "no-cache",
        "Server": [
          "Microsoft-HTTPAPI/2.0",
          "Microsoft-HTTPAPI/2.0"
        ],
        "Strict-Transport-Security": "max-age=31536000; includeSubDomains",
        "X-Content-Type-Options": "nosniff",
        "x-ms-arm-service-request-id": "f10e9005-8250-4c71-bc03-46236b957fe6",
        "x-ms-client-request-id": "b7e1972be7b49bd508934b6aa45b09e5",
        "x-ms-correlation-request-id": "4a9ce722-843b-4c80-b6ef-f2dc259ac003",
        "x-ms-ratelimit-remaining-subscription-reads": "11771",
        "x-ms-request-id": "0e320972-277c-419c-be94-0f5366ec35c7",
        "x-ms-routing-request-id": "SOUTHEASTASIA:20230628T155057Z:4a9ce722-843b-4c80-b6ef-f2dc259ac003"
      },
      "ResponseBody": {
        "name": "azsmnet8989",
        "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg3239/providers/Microsoft.Network/routeTables/azsmnet8989",
        "etag": "W/\"82293c47-9b70-4b65-ac44-b9e3e7342bfa\"",
        "type": "Microsoft.Network/routeTables",
        "location": "westus",
        "properties": {
          "provisioningState": "Succeeded",
          "resourceGuid": "4bd6260a-8821-4ca3-954e-4d6101a92b1f",
          "disableBgpRoutePropagation": false,
          "routes": [
            {
              "name": "azsmnet2845",
              "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg3239/providers/Microsoft.Network/routeTables/azsmnet8989/routes/azsmnet2845",
              "etag": "W/\"82293c47-9b70-4b65-ac44-b9e3e7342bfa\"",
              "properties": {
                "provisioningState": "Succeeded",
                "addressPrefix": "10.0.1.0/24",
                "nextHopType": "VnetLocal"
              },
              "type": "Microsoft.Network/routeTables/routes"
            }
          ]
        }
      }
    },
    {
      "RequestUri": "https://management.azure.com/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg3239/providers/Microsoft.Network/routeTables/azsmnet8989?api-version=2018-11-01",
      "RequestMethod": "GET",
      "RequestHeaders": {
        "Accept": "application/json",
        "Authorization": "Sanitized",
        "traceparent": "00-d42d0b30ab824481d8c0115a6f59e12c-a18bfc84e97aa5f5-00",
        "User-Agent": "azsdk-net-ResourceManager.Network/1.3.0-alpha.20230627.1 (.NET 7.0.7; Microsoft Windows 10.0.22621)",
        "x-ms-client-request-id": "8f48e809224b712917adfb4d15684645",
        "x-ms-return-client-request-id": "true"
      },
      "RequestBody": null,
      "StatusCode": 200,
      "ResponseHeaders": {
        "Cache-Control": "no-cache",
        "Content-Length": "985",
        "Content-Type": "application/json; charset=utf-8",
        "Date": "Wed, 28 Jun 2023 15:50:57 GMT",
        "ETag": "W/\"82293c47-9b70-4b65-ac44-b9e3e7342bfa\"",
        "Expires": "-1",
        "Pragma": "no-cache",
        "Server": [
          "Microsoft-HTTPAPI/2.0",
          "Microsoft-HTTPAPI/2.0"
        ],
        "Strict-Transport-Security": "max-age=31536000; includeSubDomains",
        "X-Content-Type-Options": "nosniff",
        "x-ms-arm-service-request-id": "a2fdc776-1a48-46da-99cf-a3c0d6c82912",
        "x-ms-client-request-id": "8f48e809224b712917adfb4d15684645",
        "x-ms-correlation-request-id": "9176df35-6dc3-417b-b2ca-e815ee49b390",
        "x-ms-ratelimit-remaining-subscription-reads": "11770",
        "x-ms-request-id": "d5e892a8-0d91-4b4b-8324-7bd712b24515",
        "x-ms-routing-request-id": "SOUTHEASTASIA:20230628T155057Z:9176df35-6dc3-417b-b2ca-e815ee49b390"
      },
      "ResponseBody": {
        "name": "azsmnet8989",
        "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg3239/providers/Microsoft.Network/routeTables/azsmnet8989",
        "etag": "W/\"82293c47-9b70-4b65-ac44-b9e3e7342bfa\"",
        "type": "Microsoft.Network/routeTables",
        "location": "westus",
        "properties": {
          "provisioningState": "Succeeded",
          "resourceGuid": "4bd6260a-8821-4ca3-954e-4d6101a92b1f",
          "disableBgpRoutePropagation": false,
          "routes": [
            {
              "name": "azsmnet2845",
              "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg3239/providers/Microsoft.Network/routeTables/azsmnet8989/routes/azsmnet2845",
              "etag": "W/\"82293c47-9b70-4b65-ac44-b9e3e7342bfa\"",
              "properties": {
                "provisioningState": "Succeeded",
                "addressPrefix": "10.0.1.0/24",
                "nextHopType": "VnetLocal"
              },
              "type": "Microsoft.Network/routeTables/routes"
            }
          ]
        }
      }
    },
    {
      "RequestUri": "https://management.azure.com/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg3239/providers/Microsoft.Network/routeTables/azsmnet8989?api-version=2018-11-01",
      "RequestMethod": "DELETE",
      "RequestHeaders": {
        "Authorization": "Sanitized",
        "traceparent": "00-67c18fefa6ae0818a3b5710886125fd4-b3a780e2d6af0a4f-00",
        "User-Agent": "azsdk-net-ResourceManager.Network/1.3.0-alpha.20230627.1 (.NET 7.0.7; Microsoft Windows 10.0.22621)",
        "x-ms-client-request-id": "14d11f4a6788d6d00c76038768cbbdc9",
        "x-ms-return-client-request-id": "true"
      },
      "RequestBody": null,
      "StatusCode": 202,
      "ResponseHeaders": {
        "Azure-AsyncNotification": "Enabled",
        "Azure-AsyncOperation": "https://management.azure.com/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/providers/Microsoft.Network/locations/westus/operations/4ca5de3f-487f-4f4f-97e6-9d2b9e8099b0?api-version=2018-11-01",
        "Cache-Control": "no-cache",
        "Content-Length": "0",
        "Date": "Wed, 28 Jun 2023 15:50:58 GMT",
        "Expires": "-1",
        "Location": "https://management.azure.com/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/providers/Microsoft.Network/locations/westus/operationResults/4ca5de3f-487f-4f4f-97e6-9d2b9e8099b0?api-version=2018-11-01",
        "Pragma": "no-cache",
        "Retry-After": "2",
        "Server": [
          "Microsoft-HTTPAPI/2.0",
          "Microsoft-HTTPAPI/2.0"
        ],
        "Strict-Transport-Security": "max-age=31536000; includeSubDomains",
        "X-Content-Type-Options": "nosniff",
        "x-ms-arm-service-request-id": "0ea473bd-1dd8-47a3-a08d-510741226d0d",
        "x-ms-client-request-id": "14d11f4a6788d6d00c76038768cbbdc9",
        "x-ms-correlation-request-id": "db7ccd6d-bedf-45be-8ad6-194845a7865e",
        "x-ms-ratelimit-remaining-subscription-deletes": "14974",
        "x-ms-request-id": "4ca5de3f-487f-4f4f-97e6-9d2b9e8099b0",
        "x-ms-routing-request-id": "SOUTHEASTASIA:20230628T155058Z:db7ccd6d-bedf-45be-8ad6-194845a7865e"
      },
      "ResponseBody": null
    },
    {
      "RequestUri": "https://management.azure.com/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/providers/Microsoft.Network/locations/westus/operations/4ca5de3f-487f-4f4f-97e6-9d2b9e8099b0?api-version=2018-11-01",
      "RequestMethod": "GET",
      "RequestHeaders": {
        "Authorization": "Sanitized",
        "traceparent": "00-67c18fefa6ae0818a3b5710886125fd4-20008aebe47dc751-00",
        "User-Agent": "azsdk-net-ResourceManager/1.6.0 (.NET 7.0.7; Microsoft Windows 10.0.22621)",
        "x-ms-client-request-id": "8520054df489a25c187183d51ea2084b",
        "x-ms-return-client-request-id": "true"
      },
      "RequestBody": null,
      "StatusCode": 200,
      "ResponseHeaders": {
        "Cache-Control": "no-cache",
        "Content-Length": "29",
        "Content-Type": "application/json; charset=utf-8",
        "Date": "Wed, 28 Jun 2023 15:50:58 GMT",
        "Expires": "-1",
        "Pragma": "no-cache",
        "Server": [
          "Microsoft-HTTPAPI/2.0",
          "Microsoft-HTTPAPI/2.0"
        ],
        "Strict-Transport-Security": "max-age=31536000; includeSubDomains",
        "X-Content-Type-Options": "nosniff",
        "x-ms-arm-service-request-id": "ec47612f-b81b-484a-a955-484701e3cd78",
        "x-ms-client-request-id": "8520054df489a25c187183d51ea2084b",
        "x-ms-correlation-request-id": "096ae88e-78b5-4e07-b15b-2d318f9e8259",
        "x-ms-ratelimit-remaining-subscription-reads": "11769",
        "x-ms-request-id": "f1d3520b-a5ce-43ac-8edf-ee2c5a722ba4",
        "x-ms-routing-request-id": "SOUTHEASTASIA:20230628T155058Z:096ae88e-78b5-4e07-b15b-2d318f9e8259"
      },
      "ResponseBody": {
        "status": "Succeeded"
      }
    },
    {
      "RequestUri": "https://management.azure.com/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg3239/providers/Microsoft.Network/routeTables?api-version=2018-11-01",
      "RequestMethod": "GET",
      "RequestHeaders": {
        "Accept": "application/json",
        "Authorization": "Sanitized",
        "traceparent": "00-889d718a6a4fce4e9d2cce55e89b98fb-c651d19e4ba803d1-00",
        "User-Agent": "azsdk-net-ResourceManager.Network/1.3.0-alpha.20230627.1 (.NET 7.0.7; Microsoft Windows 10.0.22621)",
        "x-ms-client-request-id": "dfde31ef7750f067ebc8a619c7c9ea83",
        "x-ms-return-client-request-id": "true"
      },
      "RequestBody": null,
      "StatusCode": 200,
      "ResponseHeaders": {
        "Cache-Control": "no-cache",
        "Content-Length": "19",
        "Content-Type": "application/json; charset=utf-8",
        "Date": "Wed, 28 Jun 2023 15:50:58 GMT",
        "Expires": "-1",
        "Pragma": "no-cache",
        "Server": [
          "Microsoft-HTTPAPI/2.0",
          "Microsoft-HTTPAPI/2.0"
        ],
        "Strict-Transport-Security": "max-age=31536000; includeSubDomains",
        "X-Content-Type-Options": "nosniff",
        "x-ms-arm-service-request-id": "167c3e33-50f1-488b-b76c-ed327a9e44e9",
        "x-ms-client-request-id": "dfde31ef7750f067ebc8a619c7c9ea83",
        "x-ms-correlation-request-id": "716d3290-1c47-4e63-b6ef-035a5e0f6adb",
        "x-ms-ratelimit-remaining-subscription-reads": "11768",
        "x-ms-request-id": "05e896f3-987d-44d4-ad8f-7ec2e0393136",
        "x-ms-routing-request-id": "SOUTHEASTASIA:20230628T155059Z:716d3290-1c47-4e63-b6ef-035a5e0f6adb"
      },
      "ResponseBody": {
        "value": []
      }
    }
  ],
  "Variables": {
    "AZURE_AUTHORITY_HOST": "https://login.microsoftonline.com",
    "LOCATION": "westus",
    "RandomSeed": "1561976546",
    "RESOURCE_MANAGER_URL": null,
    "SUBSCRIPTION_ID": "db1ab6f0-4769-4b27-930e-01e2ef9c123c"
  }
}
